[gd_scene load_steps=11 format=2]

[ext_resource path="res://fonts/ubuntu_b_16.tres" type="Theme" id=1]
[ext_resource path="res://fonts/ubuntu_b_32.tres" type="Theme" id=2]
[ext_resource path="res://fonts/ubuntu_b_13.tres" type="Theme" id=3]
[ext_resource path="res://Fight/fight_location_ui.gd" type="Script" id=4]
[ext_resource path="res://fonts/Ubuntu-B.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://Card/description/description_main.tscn" type="PackedScene" id=9]

[sub_resource type="DynamicFont" id=1]
size = 84
font_data = ExtResource( 8 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
use_mipmaps = true
use_filter = true
font_data = ExtResource( 8 )

[sub_resource type="Theme" id=4]
default_font = SubResource( 3 )

[node name="fight_ui" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -133, 379 )
mouse_filter = 2
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="button_exit_to_main_menu" type="Button" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 3.0
margin_top = -50.0
margin_right = 122.0
margin_bottom = -3.0
theme = ExtResource( 1 )
text = "Главное меню"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="button_exit_to_map" type="Button" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = -102.0
margin_right = 166.0
margin_bottom = -55.0
theme = ExtResource( 1 )
text = "Пропуск боя (debug)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Status1" type="RichTextLabel" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -74.0
margin_top = -28.0
theme = ExtResource( 1 )
text = "Атака"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Status2" type="RichTextLabel" parent="."]
anchor_left = 0.998
anchor_top = -0.007
anchor_right = 0.998
anchor_bottom = -0.007
margin_left = -119.952
margin_top = 4.2
margin_right = 2.04797
margin_bottom = 30.2
theme = ExtResource( 1 )
text = "Ход противника"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="loop" type="RichTextLabel" parent="."]
anchor_left = 1.0
anchor_top = 0.501
anchor_right = 1.0
anchor_bottom = 0.501
margin_left = -31.0
margin_top = -21.6
margin_bottom = 21.4
theme = ExtResource( 2 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
text = "1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="loop_label" type="RichTextLabel" parent="."]
visible = false
anchor_left = 1.0
anchor_top = 0.497
anchor_right = 1.0
anchor_bottom = 0.497
margin_left = -74.0
margin_top = -9.20001
margin_right = -43.0
margin_bottom = 7.79999
theme = ExtResource( 3 )
text = "loop"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Final_status" type="Control" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -10.0
margin_top = -5.0
margin_right = 12.0
margin_bottom = 9.0

[node name="RichTextLabel" type="RichTextLabel" parent="Final_status"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -241.0
margin_top = -64.0
margin_right = 240.0
margin_bottom = 35.0
theme = SubResource( 2 )
custom_colors/default_color = Color( 0.890196, 0.819608, 0.0627451, 1 )
bbcode_enabled = true
bbcode_text = "[center] Победа [/center]"
text = " Победа "
fit_content_height = true

[node name="return_to_map" type="Button" parent="Final_status"]
margin_left = -39.0
margin_top = 64.0
margin_right = 64.0
margin_bottom = 107.0
theme = SubResource( 4 )
text = "Карта мира"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="description_card" parent="." instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.4, 0 )
visible = false

[connection signal="pressed" from="button_exit_to_main_menu" to="." method="_on_button_exit_to_main_menu_pressed"]
[connection signal="pressed" from="button_exit_to_map" to="." method="_on_button_exit_to_map_pressed"]
[connection signal="mouse_entered" from="loop" to="." method="_on_loop_mouse_entered"]
[connection signal="mouse_exited" from="loop" to="." method="_on_loop_mouse_exited"]
[connection signal="pressed" from="Final_status/return_to_map" to="." method="_on_final_status_return_to_map_pressed"]
